@@ -17,3 +17,4 @@ New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - added extension profile for CPS3
 - the effective theme and page information is cached in the REQUEST
+- the portlet cache is cleared when exiting the theme manager.
